--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = "Sequence-to-sequence model for machine translation"
 readme = "README.md"
 requires-python = ">=3.12"
+authors = [
+    {name = "Seq2Seq Team"}
+]
 dependencies = [
     "torch>=2.0.0",
     "numpy>=1.24.0",
@@ -19,6 +22,11 @@ dev = [
     "pytest>=7.3.1",
     "ruff>=0.0.270",
 ]
+
+[project.scripts]
+seq2seq-train = "seq2seq.scripts.train_cli:main"
+seq2seq-translate = "seq2seq.scripts.translate_cli:main"
+seq2seq-prepare = "seq2seq.scripts.prepare_cli:main"
 
 [build-system]
 requires = ["setuptools>=61.0.0", "wheel"]
